--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -384,6 +384,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3HX-75-4PD">
+                                <rect key="frame" x="94" y="50" width="188" height="188"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="3HX-75-4PD" secondAttribute="height" multiplier="1:1" id="VuO-vu-wzU"/>
+                                </constraints>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Qj3-ez-nIH">
                                 <rect key="frame" x="10" y="278" width="355" height="242"/>
                                 <subviews>
@@ -459,12 +465,6 @@
                                     <action selector="skillsButtonPressed:" destination="lOk-34-fsC" eventType="touchUpInside" id="S1G-Ma-CkA"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="britney" translatesAutoresizingMaskIntoConstraints="NO" id="3HX-75-4PD">
-                                <rect key="frame" x="93.5" y="50.5" width="187.5" height="187.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="3HX-75-4PD" secondAttribute="height" multiplier="1:1" id="VuO-vu-wzU"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Em-x2-1Cv" customClass="gradientButton" customModule="reSOUND" customModuleProvider="target">
                                 <rect key="frame" x="300" y="20" width="65" height="40"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
@@ -474,39 +474,33 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="update profile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMt-QR-KPY">
-                                <rect key="frame" x="132" y="40" width="110.5" height="23.5"/>
+                                <rect key="frame" x="132" y="30" width="111" height="23.5"/>
                                 <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="111" id="PEv-Ub-E3y"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BHo-RY-Xh7">
-                                <rect key="frame" x="59.5" y="214" width="24" height="24"/>
-                                <state key="normal" image="addPhoto1x"/>
-                                <connections>
-                                    <action selector="didTapAddPhoto:" destination="lOk-34-fsC" eventType="touchUpInside" id="tvk-Nh-bM9"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="3HX-75-4PD" firstAttribute="width" secondItem="d5b-UO-nN2" secondAttribute="width" multiplier="0.5" id="3FW-Kn-UPj"/>
-                            <constraint firstItem="VMt-QR-KPY" firstAttribute="centerX" secondItem="PAd-yO-PDl" secondAttribute="centerX" id="3ul-PB-WGN"/>
-                            <constraint firstItem="VMt-QR-KPY" firstAttribute="top" secondItem="PAd-yO-PDl" secondAttribute="top" constant="20" id="7SO-G3-jqT"/>
+                            <constraint firstItem="VMt-QR-KPY" firstAttribute="centerX" secondItem="3HX-75-4PD" secondAttribute="centerX" id="693-Nl-BVL"/>
                             <constraint firstItem="3HX-75-4PD" firstAttribute="centerX" secondItem="PAd-yO-PDl" secondAttribute="centerX" id="8HK-nx-1Ur"/>
                             <constraint firstItem="2Em-x2-1Cv" firstAttribute="top" secondItem="d5b-UO-nN2" secondAttribute="top" constant="20" id="96j-iH-9Kx"/>
+                            <constraint firstItem="VMt-QR-KPY" firstAttribute="top" secondItem="PAd-yO-PDl" secondAttribute="top" constant="10" id="EJj-GR-LNK"/>
                             <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="2Em-x2-1Cv" secondAttribute="trailing" constant="10" id="OL6-kj-HSI"/>
                             <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="Qj3-ez-nIH" secondAttribute="trailing" constant="10" id="P2b-oc-yiC"/>
                             <constraint firstAttribute="trailing" secondItem="3al-8f-Am8" secondAttribute="trailing" id="QtC-AB-z3W"/>
                             <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="KwC-c0-TOV" secondAttribute="trailing" constant="146" id="Uix-fe-KCO"/>
-                            <constraint firstItem="3HX-75-4PD" firstAttribute="leading" secondItem="BHo-RY-Xh7" secondAttribute="trailing" constant="10" id="WXm-pJ-KQM"/>
                             <constraint firstItem="KwC-c0-TOV" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="146" id="cQI-h0-NSJ"/>
                             <constraint firstItem="3al-8f-Am8" firstAttribute="top" secondItem="PAd-yO-PDl" secondAttribute="bottom" id="dSn-9e-XxG"/>
                             <constraint firstItem="2Em-x2-1Cv" firstAttribute="width" secondItem="d5b-UO-nN2" secondAttribute="height" multiplier="65:667" id="gsa-lY-goN"/>
                             <constraint firstItem="y0h-TL-JR7" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="j4n-7M-49c"/>
                             <constraint firstItem="y0h-TL-JR7" firstAttribute="top" secondItem="Qj3-ez-nIH" secondAttribute="bottom" constant="8" id="jd4-Y3-fzO"/>
                             <constraint firstItem="KwC-c0-TOV" firstAttribute="top" secondItem="y0h-TL-JR7" secondAttribute="bottom" constant="8" id="lVH-nU-QEv"/>
-                            <constraint firstItem="Qj3-ez-nIH" firstAttribute="top" secondItem="BHo-RY-Xh7" secondAttribute="bottom" constant="40" id="mm2-Io-lou"/>
                             <constraint firstItem="3al-8f-Am8" firstAttribute="leading" secondItem="d5b-UO-nN2" secondAttribute="leading" id="rpo-3J-CJc"/>
                             <constraint firstItem="Qj3-ez-nIH" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="w6H-Pp-vjT"/>
                             <constraint firstItem="3al-8f-Am8" firstAttribute="top" secondItem="KwC-c0-TOV" secondAttribute="bottom" constant="16" id="yzT-mB-pPb"/>
@@ -1133,7 +1127,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="addPhoto1x" width="24" height="24"/>
         <image name="britney" width="402" height="302"/>
     </resources>
     <inferredMetricsTieBreakers>
