--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -534,7 +534,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lcp-UB-EfH">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lcp-UB-EfH">
                                 <rect key="frame" x="10" y="104" width="355" height="396"/>
                                 <color key="backgroundColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
@@ -592,8 +592,18 @@
                                     <outlet property="delegate" destination="Oeb-Wb-hbv" id="LC1-lo-ukz"/>
                                 </connections>
                             </tableView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="chat here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eZk-ws-Mnt">
-                                <rect key="frame" x="10" y="510" width="355" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3za-TC-eRl">
+                                <rect key="frame" x="308" y="558" width="57" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <state key="normal" title="send"/>
+                                <connections>
+                                    <action selector="chatSendButtonPressed:" destination="Oeb-Wb-hbv" eventType="touchUpInside" id="B72-RZ-cAQ"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="chat here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eZk-ws-Mnt">
+                                <rect key="frame" x="16" y="558" width="282" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -601,27 +611,12 @@
                                     <outlet property="delegate" destination="Oeb-Wb-hbv" id="fA6-3L-DGY"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3za-TC-eRl">
-                                <rect key="frame" x="308" y="550" width="57" height="45"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
-                                <state key="normal" title="send"/>
-                                <connections>
-                                    <action selector="chatSendButtonPressed:" destination="Oeb-Wb-hbv" eventType="touchUpInside" id="B72-RZ-cAQ"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="3za-TC-eRl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Yb9-Yh-f3b" secondAttribute="leading" constant="20" symbolic="YES" id="6PZ-7r-9WR"/>
-                            <constraint firstItem="eZk-ws-Mnt" firstAttribute="top" secondItem="lcp-UB-EfH" secondAttribute="bottom" constant="10" id="6fb-sv-u63"/>
-                            <constraint firstItem="3za-TC-eRl" firstAttribute="top" secondItem="eZk-ws-Mnt" secondAttribute="bottom" constant="10" id="9Hh-Pq-RnR"/>
                             <constraint firstItem="lcp-UB-EfH" firstAttribute="leading" secondItem="Th4-WY-l2F" secondAttribute="leading" constant="10" id="BkO-W3-11b"/>
-                            <constraint firstItem="Th4-WY-l2F" firstAttribute="bottom" secondItem="3za-TC-eRl" secondAttribute="bottom" constant="23" id="Bnl-qN-v3Q"/>
                             <constraint firstItem="Th4-WY-l2F" firstAttribute="trailing" secondItem="lcp-UB-EfH" secondAttribute="trailing" constant="10" id="Szj-zp-ZW8"/>
                             <constraint firstItem="lcp-UB-EfH" firstAttribute="top" secondItem="Th4-WY-l2F" secondAttribute="top" constant="40" id="Tp3-qY-Jam"/>
-                            <constraint firstItem="Th4-WY-l2F" firstAttribute="trailing" secondItem="eZk-ws-Mnt" secondAttribute="trailing" constant="10" id="WI1-9n-Mfu"/>
-                            <constraint firstItem="Th4-WY-l2F" firstAttribute="trailing" secondItem="3za-TC-eRl" secondAttribute="trailing" constant="10" id="c2R-ud-8kZ"/>
-                            <constraint firstItem="eZk-ws-Mnt" firstAttribute="leading" secondItem="Th4-WY-l2F" secondAttribute="leading" constant="10" id="e0h-be-R9c"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Th4-WY-l2F"/>
                     </view>
@@ -633,7 +628,31 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lO0-Hy-QeD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-26" y="3296"/>
+            <point key="canvasLocation" x="-26.399999999999999" y="3295.5022488755626"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="VcC-g5-Zek">
+            <objects>
+                <viewController id="dBr-4A-v3c" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pEo-n5-xa2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Mik-qd-YP7">
+                                <rect key="frame" x="38" y="535" width="241" height="112"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="3eq-iu-fz5"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P2k-gp-5wX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="602.39999999999998" y="3418.7406296851577"/>
         </scene>
         <!--Sign In View Controller-->
         <scene sceneID="gfd-Td-2ls">
