--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -589,11 +589,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lcp-UB-EfH">
-                                <rect key="frame" x="10" y="104" width="355" height="396"/>
-                                <color key="backgroundColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="396" id="Ew7-5N-sSW"/>
-                                </constraints>
+                                <rect key="frame" x="10" y="74" width="355" height="464"/>
+                                <color key="backgroundColor" red="0.83165590454171789" green="0.85217757608230416" blue="0.88292954083021524" alpha="0.14958797089041095" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="chatCell" rowHeight="145" id="vBp-jQ-7bb" customClass="ChatCell" customModule="reSOUND" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="355" height="145"/>
@@ -602,12 +599,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="355" height="145"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lSq-wT-4nZ">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lSq-wT-4nZ">
                                                     <rect key="frame" x="15" y="51" width="325" height="83"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.65278508400454971" green="0.86377811104059476" blue="1" alpha="0.41366117294520549" colorSpace="custom" customColorSpace="displayP3"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="83" id="oez-eU-sdp"/>
-                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                     <color key="textColor" red="0.0082919335973802924" green="0.010844795654669179" blue="0.012848984771573591" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
@@ -617,29 +612,19 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNx-Nq-FRW">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNx-Nq-FRW">
                                                     <rect key="frame" x="15" y="11" width="126" height="43"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="43" id="htp-XX-doM"/>
-                                                    </constraints>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="lSq-wT-4nZ" firstAttribute="leading" secondItem="aMe-NK-J7y" secondAttribute="leadingMargin" id="5nP-Fk-3mY"/>
-                                                <constraint firstItem="lSq-wT-4nZ" firstAttribute="bottom" secondItem="aMe-NK-J7y" secondAttribute="bottomMargin" id="Dr2-mA-vDw"/>
-                                                <constraint firstItem="qNx-Nq-FRW" firstAttribute="top" secondItem="aMe-NK-J7y" secondAttribute="topMargin" id="IGd-Dn-wBO"/>
-                                                <constraint firstItem="qNx-Nq-FRW" firstAttribute="leading" secondItem="aMe-NK-J7y" secondAttribute="leadingMargin" id="Idl-8O-fHY"/>
-                                                <constraint firstItem="lSq-wT-4nZ" firstAttribute="trailing" secondItem="aMe-NK-J7y" secondAttribute="trailingMargin" id="R2q-2C-XKT"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="qNx-Nq-FRW" secondAttribute="trailing" constant="199" id="Yes-4O-26o"/>
-                                            </constraints>
+                                            <color key="backgroundColor" red="0.88525942742280472" green="0.90710380211980057" blue="0.9398378530129563" alpha="0.19796125856164384" colorSpace="custom" customColorSpace="displayP3"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
-                                            <outlet property="leftConstraint" destination="Idl-8O-fHY" id="yLp-dI-H3W"/>
                                             <outlet property="messageLabel" destination="lSq-wT-4nZ" id="I10-PY-wyJ"/>
-                                            <outlet property="rightConstraint" destination="Yes-4O-26o" id="OKe-Zs-5rM"/>
                                             <outlet property="senderLabel" destination="qNx-Nq-FRW" id="8Db-4a-iKx"/>
                                         </connections>
                                     </tableViewCell>
@@ -649,46 +634,46 @@
                                     <outlet property="delegate" destination="Oeb-Wb-hbv" id="LC1-lo-ukz"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3za-TC-eRl">
-                                <rect key="frame" x="308" y="558" width="57" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
-                                <state key="normal" title="send"/>
-                                <connections>
-                                    <action selector="chatSendButtonPressed:" destination="Oeb-Wb-hbv" eventType="touchUpInside" id="B72-RZ-cAQ"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="chat here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eZk-ws-Mnt">
-                                <rect key="frame" x="16" y="558" width="87" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="Oeb-Wb-hbv" id="fA6-3L-DGY"/>
-                                </connections>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AlS-cu-z7D">
-                                <rect key="frame" x="111" y="508" width="180" height="95"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AlS-cu-z7D">
+                                <rect key="frame" x="10" y="548" width="288" height="60"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="JhR-62-ZDf"/>
+                                </constraints>
                                 <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3za-TC-eRl">
+                                <rect key="frame" x="308" y="548" width="57" height="60"/>
+                                <color key="backgroundColor" red="0.083244337612414038" green="0.65187439988374041" blue="0.95479060913705582" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <state key="normal" title="send">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="chatSendButtonPressed:" destination="Oeb-Wb-hbv" eventType="touchUpInside" id="B72-RZ-cAQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="lcp-UB-EfH" firstAttribute="leading" secondItem="Th4-WY-l2F" secondAttribute="leading" constant="10" id="BkO-W3-11b"/>
-                            <constraint firstItem="Th4-WY-l2F" firstAttribute="trailing" secondItem="lcp-UB-EfH" secondAttribute="trailing" constant="10" id="Szj-zp-ZW8"/>
-                            <constraint firstItem="lcp-UB-EfH" firstAttribute="top" secondItem="Th4-WY-l2F" secondAttribute="top" constant="40" id="Tp3-qY-Jam"/>
+                            <constraint firstItem="Th4-WY-l2F" firstAttribute="trailing" secondItem="3za-TC-eRl" secondAttribute="trailing" constant="10" id="2oh-8U-351"/>
+                            <constraint firstItem="3za-TC-eRl" firstAttribute="leading" secondItem="AlS-cu-z7D" secondAttribute="trailing" constant="10" id="9kw-mY-hWd"/>
+                            <constraint firstItem="lcp-UB-EfH" firstAttribute="top" secondItem="Th4-WY-l2F" secondAttribute="top" constant="10" id="K3D-mu-vgF"/>
+                            <constraint firstItem="lcp-UB-EfH" firstAttribute="leading" secondItem="Th4-WY-l2F" secondAttribute="leading" constant="10" id="M8d-SC-c5y"/>
+                            <constraint firstItem="3za-TC-eRl" firstAttribute="height" secondItem="AlS-cu-z7D" secondAttribute="height" id="PDg-qr-59d"/>
+                            <constraint firstItem="Th4-WY-l2F" firstAttribute="trailing" secondItem="lcp-UB-EfH" secondAttribute="trailing" constant="10" id="Sda-Bx-zaO"/>
+                            <constraint firstItem="3za-TC-eRl" firstAttribute="top" secondItem="lcp-UB-EfH" secondAttribute="bottom" constant="10" id="i72-X3-sHV"/>
+                            <constraint firstItem="Th4-WY-l2F" firstAttribute="bottom" secondItem="3za-TC-eRl" secondAttribute="bottom" constant="10" id="kLd-nC-fon"/>
+                            <constraint firstItem="Th4-WY-l2F" firstAttribute="bottom" secondItem="AlS-cu-z7D" secondAttribute="bottom" constant="10" id="pKm-fX-CNe"/>
+                            <constraint firstItem="AlS-cu-z7D" firstAttribute="leading" secondItem="Th4-WY-l2F" secondAttribute="leading" constant="10" id="uDg-eM-Jql"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Th4-WY-l2F"/>
                     </view>
                     <connections>
                         <outlet property="chatSendButton" destination="3za-TC-eRl" id="ELO-GZ-opQ"/>
                         <outlet property="chatTableView" destination="lcp-UB-EfH" id="ic8-ld-FxA"/>
-                        <outlet property="chatTextField" destination="eZk-ws-Mnt" id="zjV-0Z-S37"/>
                         <outlet property="chatTextView" destination="AlS-cu-z7D" id="CgL-bt-2qr"/>
                     </connections>
                 </viewController>
